# laravel/routes/v1/users.php
@@ -4,16 +4,18 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\ControllerAuth;
-use App\Http\Controllers\ControllerAdminUsers;
-use App\Http\Controllers\ControllerPayment;
+use App\Http\Controllers\ControllerUsers;
+
 
 Route::post('/login', [ControllerAuth::class, 'login']);
 Route::middleware(["auth:api"])->post('/logout', [ControllerAuth::class, 'logout']);
 
 Route::prefix('/admin')->middleware(["auth:api"])->group(function () {
-    Route::apiResource('/user', ControllerAdminUsers::class);
-    Route::get('/profile', [ControllerAuth::class, 'profile']);
+    /** User */
+    Route::apiResource('/user', ControllerUsers::class);
     Route::get('/update/{id}', [ControllerAuth::class, 'profile']);
+
+    /** Auth */
+    Route::get('/profile', [ControllerAuth::class, 'profile']);
 });
 
-Route::post('/stripe-checkout', [ControllerPayment::class, 'StripePaymentAPI']);
